--- a/client/src/style/main.scss
+++ b/client/src/style/main.scss
@@ -43,14 +43,14 @@ html, body, #root, #root > div {
         }
     }
 
-    .content {
+    .artifacts {
         display: inline-flex;
         flex-direction: column;
         margin-left: 10%;
         width: 60%;
         height: 90%;
 
-        .content-content {
+        .artifacts-content {
             border: 2px solid black;
             height: 100%;
             display: flex;
