--- a/client/src/style/main.scss
+++ b/client/src/style/main.scss
@@ -1,7 +1,14 @@
+$color-primary: #14152d;
+$color-secondary: #222349;
+
 html, body, #root, #root > div {
     height: 100vh;
     width: 100vw;
     // background-color: #6d70c9;
+}
+
+h3 {
+    margin-left: 30px;
 }
 
 .content-container {
@@ -11,11 +18,37 @@ html, body, #root, #root > div {
     height: 85%;
 }
 
-.content-container.scenariolist {
-    tbody > tr:hover > td  {
-        cursor: pointer;
-        background-color: #f5f5f5;
+.content-container.edit {
+    .edit-form {
+        height: 90%;
+        border: 2px solid $color-secondary;
+        border-radius: 10px;
+        padding: 25px;
     }
+}
+
+.content-container.create {
+    .create-form {
+        height: 90%;
+        border: 2px solid $color-secondary;
+        border-radius: 10px;
+        padding: 25px;
+    }
+
+}
+
+.content-container.scenariolist {
+    .list {
+        height: 90%;
+        border: 2px solid $color-secondary;
+        border-radius: 10px;
+        padding: 25px;
+    }
+    
+    // tbody > tr:hover > td  {
+    //     cursor: pointer;
+    //     background-color: #f5f5f5;
+    // }
 
     thead > tr > th:last-of-type {
         padding-left: 20px;
@@ -35,11 +68,20 @@ html, body, #root, #root > div {
         height: 90%;
 
         .info-content {
-            border: 2px solid black;
+            border-radius: 10px;
+            border: 2px solid $color-secondary;
             height: 100%;
             display: flex;
             flex-direction: column;
-            justify-content: flex-start;
+            padding: 25px;
+        }
+        
+        .infolet {
+            margin-bottom: 25px;
+            font-size: 1.5rem;
+            span {
+                font-size: 1.2rem;
+            }
         }
     }
 
@@ -48,14 +90,94 @@ html, body, #root, #root > div {
         flex-direction: column;
         margin-left: 10%;
         width: 60%;
-        height: 90%;
+        height: calc(90% + 8px);
+
+        h3 {
+            margin-bottom: 0px;
+            margin-left: 0px;
+        }
+
+        button {
+            background-color: white;
+            border-bottom: none;
+            border-top-right-radius: 10px;
+            border-top-left-radius: 10px;
+            margin-right: 5px;
+            :last-of-type {
+                margin-right: 0px;
+            }
+            &.selected {
+                background-color: $color-secondary;
+                color: white;
+            }
+        }
 
         .artifacts-content {
-            border: 2px solid black;
+            padding: 25px;
+            border: 2px solid $color-secondary;
+            border-radius: 10px;
+            border-top-left-radius: 0px;
             height: 100%;
             display: flex;
             flex-direction: column;
-            justify-content: flex-start;
+        }
+    }
+}
+
+.content-container.artifact {
+
+    .artifact-content {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        height: 90%;
+    }
+    .artifact-form {
+        width: 75%;
+        flex-direction: column;
+        justify-content: flex-start;
+        border: 2px solid $color-secondary;
+        border-radius: 10px;
+        padding: 25px;
+    }
+    .artifact-form > form {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        label {
+            width: 100%;
+        }
+        input[type="submit"] {
+            width: 100px;
+        }
+    }
+
+    .right-info {
+        width: 15%;
+        flex-direction: column;
+        align-items: center;
+        border: 2px solid $color-secondary;
+        border-radius: 10px;
+        .artifact-info {
+            display: flex;
+            flex-direction: column;
+            padding: 25px;
+
+            font-size: 1.5rem;
+            div {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                margin-bottom: 10px;
+            }
+            span {
+                font-size: 1.2rem;
+            }
+            a {
+                margin-top: 80%;
+                font-size: 1.1rem;
+            }
         }
     }
 }
