--- a/client/src/style/main.scss
+++ b/client/src/style/main.scss
@@ -65,7 +65,7 @@ h3 {
     //     background-color: #f5f5f5;
     // }
 
-    thead > tr > th:last-of-type {
+    th.actions {
         padding-left: 20px;
     }
 }
