--- a/client/src/style/main.scss
+++ b/client/src/style/main.scss
@@ -11,6 +11,20 @@ h3 {
     margin-left: 30px;
 }
 
+
+::-webkit-scrollbar {
+    width: 15px;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    background-color: rgb(139, 139, 139);
+}
+
 .content-container {
     margin-left: 5%;
     margin-right: 5%;
@@ -58,6 +72,7 @@ h3 {
         border: 2px solid $color-secondary;
         border-radius: 10px;
         padding: 25px;
+        overflow-y: scroll;
     }
     
     // tbody > tr:hover > td  {
@@ -135,6 +150,7 @@ h3 {
             height: 100%;
             display: flex;
             flex-direction: column;
+            overflow-y: scroll;
         }
     }
 }
